Fix for mobile height jump

--- a/client/src/styles/listings.scss
+++ b/client/src/styles/listings.scss
@@ -1,16 +1,8 @@
 div#entries {
   max-width: 1440px;
 
-  .react {
-    color: #61dafb;
-  }
-
-  .reddit {
-    color: rgb(252, 71, 35);
-  }
-
   .post-action-expand {
-    margin-left: -.3rem !important
+    margin-left: -0.3rem !important;
   }
 
   .entry-interior-t1 .entry-after-header {
@@ -18,7 +10,7 @@ div#entries {
   }
 
   .post-parent {
-    margin-top: .5rem !important;
+    margin-top: 0.5rem !important;
     border-top: none;
   }
 
@@ -122,8 +114,9 @@ div#entries {
         padding: 0;
         font-size: 1em;
       }
-      span {
-        vertical-align: middle !important;
+
+      a {
+        line-height: 1;
       }
     }
 
@@ -148,8 +141,12 @@ div#entries {
 
     .meta {
       span,
-      a {
+      a,
+      button {
         vertical-align: middle !important;
+      }
+      a {
+        line-height: 1;
       }
     }
 
@@ -158,7 +155,7 @@ div#entries {
       font-size: 0.85em;
 
       button {
-        line-height: 1 !important;
+        //line-height: 1 !important;
         padding: 0;
         margin: 0;
         font-size: 1em;
@@ -222,6 +219,12 @@ div#entries {
   .debug-info-content {
     width: 250px;
   }
+}
+
+.debug-visibility {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 /** Specific settings for touch devices **/
